# prompt_engineering_git

./: README.md
prompt_engineering/: README.md  Ticketcategorization_COT_resoning.py  few_shot_prompting.py  pyproject.toml  requirements.txt
prompt_engineering/ATS_Resume_filtering/: ATS.py
prompt_engineering/incident_summrization/: inc_data_final_demo.csv  inc_summarizer.py  step1_output.csv  test.py
